--- a/public/css/app.css
+++ b/public/css/app.css
@@ -51,6 +51,10 @@ li {
     margin: 0;
 }
 
+.select2-container .select2-selection__choice {
+    height: 100% !important;
+}
+
 .sublist ul {
     display: flex;
     list-style-type: none;
