--- a/public/css/app backup.css
+++ b/public/css/app backup.css
@@ -6,11 +6,17 @@ body{
 }
 
 .sidenav{
+    /* padding-left: 1rem;
+    padding-right: 1rem; */
+    /* overflow: hidden; */
     height: 100vh;
     width: 260px;
+    /* background: #181818; */
     background: #181818;
+    /* padding: 1rem; */
     overflow-y: auto;
     overflow-x: hidden;
+    /* scrollbar-width: thin; */
 }
 
 .sidenav::-webkit-scrollbar{
@@ -153,26 +159,10 @@ li {
 }
 
 .content{
-    height: 100vh;
-    overflow-y: auto;
-    overflow-x: hidden;
     flex: 1;
     background: #fcfcfc;
     padding: 1rem;
     /* border: 10px solid rgb(204, 167, 0); */
-}
-
-.content::-webkit-scrollbar{
-    width: 0.5em;
-}
-
-.content::-webkit-scrollbar-thumb{
-    background: rgba(0, 0, 0, 0.3);
-    border-radius: 100vw;
-}
-
-.content::-webkit-scrollbar-thumb:hover{
-    background: rgba(0, 0, 0, 0.5);;
 }
 
 h1{
